single objective heuristic selector

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1306,6 +1306,13 @@
     "            \n",
     "    return pareto_fronts,  individuals_selected\n",
     "\n",
+    "def knapsack_to_soh(knapsack):\n",
+    "    return knapsack['value'] / knapsack['weight']\n",
+    "\n",
+    "def single_objective_selector(population, n_select=20, objective='value_weight_ratio'):    \n",
+    "    population_sorted = {k: v for k, v in sorted(population.items(), key=lambda indv: indv[1][objective], reverse=True)} \n",
+    "    \n",
+    "    return {k: population_sorted[k] for k in list(population_sorted.keys())[:n_select]} \n",
     "\n",
     "def create_children(idx_indv_start, idxs_parents, population_parents, n_packages_mutate=None):\n",
     "    idxs_chidren = {}\n",
@@ -1370,9 +1377,7 @@
     "    # randomising (keeping list in order to keep random order. perhaps best done in the cross-over function ...)\n",
     "    transformation_idxs_parents['mate'] = list(np.random.choice(list(transformation_idxs_parents['mate']), len(transformation_idxs_parents['mate']), replace=False))\n",
     "    \n",
-    "    return transformation_idxs_parents\n",
-    "   \n",
-    "\n"
+    "    return transformation_idxs_parents"
    ]
   },
   {
@@ -1394,7 +1399,7 @@
     "    \n",
     "def knapsack_genetic_algorithm(n_generations, n_initial_poppulation=None, n_packages_mutate=None, \n",
     "                               cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False, \n",
-    "                               parents_compete=None):\n",
+    "                               parents_compete=None, selector='pareto_naive'):\n",
     "    if not cx_prob:\n",
     "        cx_prob = PROB_CROSS_OVER\n",
     "    if not mutate_prob:\n",
@@ -1407,6 +1412,10 @@
     "        parents_compete = PARENTS_COMPETE\n",
     "        \n",
     "    population_parents = create_knapsacks(n_initial_poppulation, seed=seed)\n",
+    "    \n",
+    "    if 'single_objective_optimisation' == selector:\n",
+    "        for idx_indv, indv in population_parents.items():\n",
+    "            indv['value_weight_ratio'] = knapsack_to_soh(indv)\n",
     "    \n",
     "    population_all_generations = {idx_indv: {'packages': population_parents[idx_indv]['packages']} for idx_indv in population_parents}\n",
     "    \n",
@@ -1431,6 +1440,10 @@
     "                if objective not in indv:\n",
     "                    knapsack_objective(indv, objective, packages)\n",
     "                    \n",
+    "            if 'single_objective_optimisation' == selector:\n",
+    "                indv['value_weight_ratio'] = knapsack_to_soh(indv)\n",
+    "        \n",
+    "                    \n",
     "        # --- selection ---\n",
     "        # population for selection\n",
     "        if parents_compete:\n",
@@ -1443,8 +1456,12 @@
     "            _update_log(gen_num, {**population_parents, **population_children}, population_all_generations)\n",
     "\n",
     "        # the selection \n",
-    "        pareto_fronts, individuals_selected = naive_pareto_selector(population_competing, \n",
-    "                          n_select=len(population_parents), exact_n_selection=exact_n_selection)\n",
+    "        if 'single_objective_optimisation' == selector:\n",
+    "            individuals_selected = single_objective_selector(population_competing, n_select=len(population_parents))\n",
+    "            pareto_fronts = None\n",
+    "        else:\n",
+    "            pareto_fronts, individuals_selected = naive_pareto_selector(population_competing, \n",
+    "                              n_select=len(population_parents), exact_n_selection=exact_n_selection)\n",
     "\n",
     "        \n",
     "        # --- plotting ---\n",
@@ -1467,11 +1484,12 @@
     "        else:\n",
     "            label = None\n",
     "\n",
-    "        knapsacks_to_sort = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing if idx_indv in pareto_fronts[0]}\n",
-    "        knapsacks_sorted_by_weight = {k: v for k, v in sorted(knapsacks_to_sort.items(), key=lambda knapsack: knapsack[1]['weight'], reverse=False)}\n",
-    "        plt.plot([knapsacks['weight'] for _, knapsacks in knapsacks_sorted_by_weight.items()],\n",
-    "                 [knapsacks['value'] for _, knapsacks in knapsacks_sorted_by_weight.items()], '-o',\n",
-    "                         alpha=alpha, color='purple', label=label)\n",
+    "        if pareto_fronts:\n",
+    "            knapsacks_to_sort = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing if idx_indv in pareto_fronts[0]}\n",
+    "            knapsacks_sorted_by_weight = {k: v for k, v in sorted(knapsacks_to_sort.items(), key=lambda knapsack: knapsack[1]['weight'], reverse=False)}\n",
+    "            plt.plot([knapsacks['weight'] for _, knapsacks in knapsacks_sorted_by_weight.items()],\n",
+    "                     [knapsacks['value'] for _, knapsacks in knapsacks_sorted_by_weight.items()], '-o',\n",
+    "                             alpha=alpha, color='purple', label=label)\n",
     "\n",
     "        \n",
     "        \n",
@@ -1482,7 +1500,7 @@
     "    plt.xlabel('weight [kg]')\n",
     "    plt.ylabel('value [£]')   \n",
     "    \n",
-    "    return population_all_generations"
+    "    return population_all_generations, population_parents"
    ]
   },
   {
@@ -1511,8 +1529,11 @@
    "source": [
     "n_generations = 20\n",
     "parents_compete = True\n",
+    "selector = 'pareto_naive' # 'single_objective_optimisation'\n",
     "\n",
-    "population_all = knapsack_genetic_algorithm(n_generations, seed=1, exact_n_selection=True, parents_compete=parents_compete)"
+    "population_all, population_parents = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
+    "                                                                exact_n_selection=True, \n",
+    "                                                                parents_compete=parents_compete)"
    ]
   },
   {
@@ -1560,25 +1581,16 @@
   },
   "toc": {
    "base_numbering": 1,
-   "colors": {
-    "hover_highlight": "#DAA520",
-    "running_highlight": "#FF0000",
-    "selected_highlight": "#FFD700"
-   },
-   "moveMenuLeft": true,
    "nav_menu": {},
-   "navigate_menu": true,
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "threshold": 4,
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true,
-   "widenNotebook": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
