visualising and annotating result comparisons between soh and pareto selectors

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1399,7 +1399,7 @@
     "    \n",
     "def knapsack_genetic_algorithm(n_generations, n_initial_poppulation=None, n_packages_mutate=None, \n",
     "                               cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False, \n",
-    "                               parents_compete=None, selector='pareto_naive'):\n",
+    "                               parents_compete=None, selector='pareto_naive', visualise=True):\n",
     "    if not cx_prob:\n",
     "        cx_prob = PROB_CROSS_OVER\n",
     "    if not mutate_prob:\n",
@@ -1465,31 +1465,32 @@
     "\n",
     "        \n",
     "        # --- plotting ---\n",
+    "        if visualise:\n",
     "        \n",
-    "        alpha = (1. - gen_num/n_generations)\n",
-    "        \n",
-    "        if gen_num in [0, n_generations - 1]: \n",
-    "            if 0 == gen_num:\n",
-    "                marker = 's'\n",
-    "                size = 40\n",
-    "            else:\n",
-    "                marker = 'x'\n",
-    "                size = 100\n",
-    "            \n",
-    "            label = f'parents+children gen {gen_num + 1}'\n",
-    "            plt.scatter([knapsacks['weight'] for _, knapsacks in population_competing.items()],\n",
-    "                            [knapsacks['value'] for _, knapsacks in population_competing.items()],\n",
-    "                             s=size, alpha=0.7, color='green', label=label, marker=marker, linewidth=4)\n",
-    "            label= f'pareto front gen {gen_num + 1}'\n",
-    "        else:\n",
-    "            label = None\n",
+    "            alpha = (1. - gen_num/n_generations)\n",
     "\n",
-    "        if pareto_fronts:\n",
-    "            knapsacks_to_sort = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing if idx_indv in pareto_fronts[0]}\n",
-    "            knapsacks_sorted_by_weight = {k: v for k, v in sorted(knapsacks_to_sort.items(), key=lambda knapsack: knapsack[1]['weight'], reverse=False)}\n",
-    "            plt.plot([knapsacks['weight'] for _, knapsacks in knapsacks_sorted_by_weight.items()],\n",
-    "                     [knapsacks['value'] for _, knapsacks in knapsacks_sorted_by_weight.items()], '-o',\n",
-    "                             alpha=alpha, color='purple', label=label)\n",
+    "            if gen_num in [0, n_generations - 1]: \n",
+    "                if 0 == gen_num:\n",
+    "                    marker = 's'\n",
+    "                    size = 40\n",
+    "                else:\n",
+    "                    marker = 'x'\n",
+    "                    size = 100\n",
+    "\n",
+    "                label = f'competitors gen {gen_num + 1}'\n",
+    "                plt.scatter([knapsacks['weight'] for _, knapsacks in population_competing.items()],\n",
+    "                                [knapsacks['value'] for _, knapsacks in population_competing.items()],\n",
+    "                                 s=size, alpha=0.7, color='green', label=label, marker=marker, linewidth=4)\n",
+    "                label= f'pareto front gen {gen_num + 1}'\n",
+    "            else:\n",
+    "                label = None\n",
+    "\n",
+    "            if pareto_fronts:\n",
+    "                knapsacks_to_sort = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing if idx_indv in pareto_fronts[0]}\n",
+    "                knapsacks_sorted_by_weight = {k: v for k, v in sorted(knapsacks_to_sort.items(), key=lambda knapsack: knapsack[1]['weight'], reverse=False)}\n",
+    "                plt.plot([knapsacks['weight'] for _, knapsacks in knapsacks_sorted_by_weight.items()],\n",
+    "                         [knapsacks['value'] for _, knapsacks in knapsacks_sorted_by_weight.items()], '-o',\n",
+    "                                 alpha=alpha, color='purple', label=label)\n",
     "\n",
     "        \n",
     "        \n",
@@ -1500,7 +1501,7 @@
     "    plt.xlabel('weight [kg]')\n",
     "    plt.ylabel('value [£]')   \n",
     "    \n",
-    "    return population_all_generations, population_parents"
+    "    return population_all_generations"
    ]
   },
   {
@@ -1531,9 +1532,133 @@
     "parents_compete = True\n",
     "selector = 'pareto_naive' # 'single_objective_optimisation'\n",
     "\n",
-    "population_all, population_parents = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
+    "population_all_pareto = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
     "                                                                exact_n_selection=True, \n",
-    "                                                                parents_compete=parents_compete)"
+    "                                                                parents_compete=parents_compete)\n",
+    "\n",
+    "ax = plt.gca()\n",
+    "x_lim = ax.get_xlim()\n",
+    "y_lim = ax.get_xlim()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selector = 'single_objective_optimisation'\n",
+    "\n",
+    "population_all_soh = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
+    "                                                                exact_n_selection=True, \n",
+    "                                                                parents_compete=parents_compete)\n",
+    "\n",
+    "plt.xlim(*x_lim)\n",
+    "plt.ylim(*y_lim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluating objective values for populations \n",
+    "for idx_indv, indv in population_all_pareto.items():\n",
+    "    for objective in objectives:\n",
+    "        if objective not in indv:\n",
+    "            knapsack_objective(indv, objective, packages)\n",
+    "                    \n",
+    "    indv['value_weight_ratio'] = knapsack_to_soh(indv)\n",
+    "    \n",
+    "for idx_indv, indv in population_all_soh.items():\n",
+    "    for objective in objectives:\n",
+    "        if objective not in indv:\n",
+    "            knapsack_objective(indv, objective, packages)\n",
+    "                    \n",
+    "    indv['value_weight_ratio'] = knapsack_to_soh(indv)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining the last generation\n",
+    "\n",
+    "idx_indvs_pareto = [idx_indv for idx_indv, indv in population_all_pareto.items() if n_generations - 1 in population_all_pareto[idx_indv]['generations']]\n",
+    "idx_indvs_soh = [idx_indv for idx_indv, indv in population_all_soh.items() if n_generations - 1 in population_all_soh[idx_indv]['generations']]\n",
+    "\n",
+    "print(f'The pareto run generated {len(population_all_pareto):,} individuals and the SOH generated {len(population_all_soh):,}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def jitter(x, loc=1., scale=0.005):\n",
+    "    return x * np.random.normal(loc, scale)\n",
+    "\n",
+    "alpha = 0.2\n",
+    "jitter_factor = 0\n",
+    "\n",
+    "\n",
+    "print(f'In the last generation (no. {n_generations})\\nthe pareto run had {len(idx_indvs_pareto):,} individuals and the SOH generated {len(idx_indvs_soh):,}')\n",
+    "\n",
+    "plt.scatter([jitter(knapsacks['weight'], scale = jitter_factor) for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto],\n",
+    "            [jitter(knapsacks['value'], scale = jitter_factor) * np.random.normal(1, 0.005) for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto],\n",
+    "            s=size, alpha=alpha, color='green', label=None, marker=None, linewidth=4)\n",
+    "\n",
+    "plt.scatter([jitter(knapsacks['weight'], scale = jitter_factor) for idx_knapsack, knapsacks in population_all_soh.items() if idx_knapsack in idx_indvs_soh],\n",
+    "            [jitter(knapsacks['value'], scale = jitter_factor) for idx_knapsack, knapsacks in population_all_soh.items() if idx_knapsack in idx_indvs_soh],\n",
+    "            s=size, alpha=alpha, color='red', label=None, marker='s', linewidth=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# duplications of population\n",
+    "import pandas as pd\n",
+    "\n",
+    "# last gen SOH\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items() if idx_knapsack in idx_indvs_soh}).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# last gen pareto\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto}).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all gens SOH\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items()}).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# all gens pareto\n",
+    "\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items()}).value_counts()"
    ]
   },
   {
