pareto optmisation vs. single objective optimisation comparisons -overall and by generation

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1538,7 +1538,7 @@
     "\n",
     "ax = plt.gca()\n",
     "x_lim = ax.get_xlim()\n",
-    "y_lim = ax.get_xlim()"
+    "y_lim = ax.get_ylim()"
    ]
   },
   {
@@ -1563,7 +1563,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluating objective values for populations \n",
+    "# Evaluating objective values for populations (weight, value) as well as single objective heuristic: value/weight \n",
+    "\n",
     "for idx_indv, indv in population_all_pareto.items():\n",
     "    for objective in objectives:\n",
     "        if objective not in indv:\n",
@@ -1585,80 +1586,122 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Defining the last generation\n",
+    "# visualising all individuals of both methods \n",
     "\n",
-    "idx_indvs_pareto = [idx_indv for idx_indv, indv in population_all_pareto.items() if n_generations - 1 in population_all_pareto[idx_indv]['generations']]\n",
-    "idx_indvs_soh = [idx_indv for idx_indv, indv in population_all_soh.items() if n_generations - 1 in population_all_soh[idx_indv]['generations']]\n",
-    "\n",
-    "print(f'The pareto run generated {len(population_all_pareto):,} individuals and the SOH generated {len(population_all_soh):,}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def jitter(x, loc=1., scale=0.005):\n",
     "    return x * np.random.normal(loc, scale)\n",
     "\n",
     "alpha = 0.2\n",
-    "jitter_factor = 0\n",
+    "size = 10\n",
+    "jitter_factor = 0.0\n",
     "\n",
+    "\n",
+    "print(f'The pareto run generated {len(population_all_pareto):,} individuals and the SOH generated {len(population_all_soh):,}')\n",
+    "\n",
+    "indvs_pareto_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_pareto.items()])\n",
+    "indvs_pareto_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_pareto.items()])\n",
+    "plt.scatter(jitter(indvs_pareto_weights, scale = jitter_factor), jitter(indvs_pareto_values, scale = jitter_factor), \n",
+    "            s=size, alpha=alpha, color='green', label='Pareto Optimisation', marker=None, linewidth=4)\n",
+    "\n",
+    "\n",
+    "indvs_soh_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_soh.items()])\n",
+    "indvs_soh_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_soh.items()])\n",
+    "plt.scatter(jitter(indvs_soh_weights, scale = jitter_factor), jitter(indvs_soh_values, scale = jitter_factor),\n",
+    "            s=size, alpha=alpha, color='red', label='Value/Weight', marker='s', linewidth=4)\n",
+    "\n",
+    "\n",
+    "plt.xlabel('weight [kg]')\n",
+    "plt.ylabel('value [£]')\n",
+    "plt.title(f'Individuals of all {n_generations} generations')\n",
+    "\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "top = 4\n",
+    "\n",
+    "print(f'Duplication of Individuals in Single Objective (showing top {top})')\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items()}).value_counts().head(top)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Duplication of Individuals in Pareto Optimisation (showing top {top})')\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items()}).value_counts().head(top)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualising a selected generation\n",
+    "\n",
+    "n_generation_examine = 10 # -1 # 'final'\n",
+    "\n",
+    "jitter_factor = 0 # 0.001\n",
+    "\n",
+    "# ----\n",
+    "if ('final' == n_generation_examine) or (-1 == n_generation_examine):\n",
+    "    n_generation_examine = n_generations - 1\n",
+    "    \n",
+    "assert n_generation_examine < n_generations\n",
+    "    \n",
+    "idx_indvs_pareto = [idx_indv for idx_indv, indv in population_all_pareto.items() if n_generation_examine in population_all_pareto[idx_indv]['generations']]\n",
+    "idx_indvs_soh = [idx_indv for idx_indv, indv in population_all_soh.items() if n_generation_examine in population_all_soh[idx_indv]['generations']]\n",
     "\n",
     "print(f'In the last generation (no. {n_generations})\\nthe pareto run had {len(idx_indvs_pareto):,} individuals and the SOH generated {len(idx_indvs_soh):,}')\n",
     "\n",
-    "plt.scatter([jitter(knapsacks['weight'], scale = jitter_factor) for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto],\n",
-    "            [jitter(knapsacks['value'], scale = jitter_factor) * np.random.normal(1, 0.005) for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto],\n",
-    "            s=size, alpha=alpha, color='green', label=None, marker=None, linewidth=4)\n",
+    "indvs_pareto_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto])\n",
+    "indvs_pareto_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto])\n",
+    "plt.scatter(jitter(indvs_pareto_weights, scale = jitter_factor), jitter(indvs_pareto_values, scale = jitter_factor), \n",
+    "            s=size, alpha=alpha, color='green', label='Pareto Optimisation', marker=None, linewidth=4)\n",
     "\n",
-    "plt.scatter([jitter(knapsacks['weight'], scale = jitter_factor) for idx_knapsack, knapsacks in population_all_soh.items() if idx_knapsack in idx_indvs_soh],\n",
-    "            [jitter(knapsacks['value'], scale = jitter_factor) for idx_knapsack, knapsacks in population_all_soh.items() if idx_knapsack in idx_indvs_soh],\n",
-    "            s=size, alpha=alpha, color='red', label=None, marker='s', linewidth=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# duplications of population\n",
-    "import pandas as pd\n",
     "\n",
-    "# last gen SOH\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items() if idx_knapsack in idx_indvs_soh}).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# last gen pareto\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto}).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all gens SOH\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items()}).value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# all gens pareto\n",
     "\n",
-    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items()}).value_counts()"
+    "indvs_soh_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_soh.items() if idx_knapsack in idx_indvs_soh])\n",
+    "indvs_soh_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_soh.items() if idx_knapsack in idx_indvs_soh])\n",
+    "plt.scatter(jitter(indvs_soh_weights, scale = jitter_factor), jitter(indvs_soh_values, scale = jitter_factor),\n",
+    "            s=size, alpha=alpha, color='red', label='Value/Weight', marker='s', linewidth=4)\n",
+    "\n",
+    "plt.legend()\n",
+    "plt.xlabel('weight [kg]')\n",
+    "plt.ylabel('value [£]')\n",
+    "plt.title(f'Individuals of generation {n_generation_examine} ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top = 4\n",
+    "\n",
+    "print(f'Duplication of Individuals in Single Objective Optimisation in generation {n_generation_examine} (showing top {top})')\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_soh.items() if idx_knapsack in idx_indvs_soh}).value_counts().head(top)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Duplication of Individuals in Pareto Optimisation in generation {n_generation_examine} (showing top {top})')\n",
+    "pd.Series({idx_knapsack: {'packages': sorted(knapsack['packages'])} for idx_knapsack, knapsack in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto}).value_counts().head(top)"
    ]
   },
   {
