visualising pareto fronts and max soh for both runs: pareto optimisation, soh

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1396,10 +1396,22 @@
     "        if 'generations' not in all_gens[idx_indv]:\n",
     "            all_gens[idx_indv]['generations'] = [] \n",
     "        all_gens[idx_indv]['generations'].append(gen_num)\n",
+    "        \n",
+    "\n",
+    "def plot_pareto_front(population, objective_to_sort='weight', label=None, marker='-o', color=None, linewidth=None, alpha=0.7, markersize=None):\n",
+    "\n",
+    "    pareto_front_idxs = knapsacks_to_pareto_front(population)\n",
+    "\n",
+    "\n",
+    "    population_to_sort = {idx_indv: population[idx_indv] for idx_indv in population if idx_indv in pareto_front_idxs}\n",
+    "    population_sorted = {k: v for k, v in sorted(population_to_sort.items(), key=lambda indv: indv[1][objective_to_sort], reverse=False)}\n",
+    "    plt.plot([indv['weight'] for _, indv in population_sorted.items()],\n",
+    "             [indv['value'] for _, indv in population_sorted.items()], marker,\n",
+    "                     alpha=alpha, color=color, label=label, linewidth=linewidth, markersize=markersize)\n",
     "    \n",
     "def knapsack_genetic_algorithm(n_generations, n_initial_poppulation=None, n_packages_mutate=None, \n",
     "                               cx_prob=None, mutate_prob=None, seed=None, exact_n_selection=False, \n",
-    "                               parents_compete=None, selector='pareto_naive', visualise=True):\n",
+    "                               parents_compete=None, selector='pareto_naive', visualise=True, display_pareto_front=True):\n",
     "    if not cx_prob:\n",
     "        cx_prob = PROB_CROSS_OVER\n",
     "    if not mutate_prob:\n",
@@ -1467,8 +1479,10 @@
     "        # --- plotting ---\n",
     "        if visualise:\n",
     "        \n",
-    "            alpha = (1. - gen_num/n_generations)\n",
+    "            alpha = (1. - gen_num/(n_generations + 1))\n",
+    "            alpha = np.max([alpha, 0.1])\n",
     "\n",
+    "            marker = '-.'\n",
     "            if gen_num in [0, n_generations - 1]: \n",
     "                if 0 == gen_num:\n",
     "                    marker = 's'\n",
@@ -1484,13 +1498,10 @@
     "                label= f'pareto front gen {gen_num + 1}'\n",
     "            else:\n",
     "                label = None\n",
-    "\n",
-    "            if pareto_fronts:\n",
-    "                knapsacks_to_sort = {idx_indv: population_competing[idx_indv] for idx_indv in population_competing if idx_indv in pareto_fronts[0]}\n",
-    "                knapsacks_sorted_by_weight = {k: v for k, v in sorted(knapsacks_to_sort.items(), key=lambda knapsack: knapsack[1]['weight'], reverse=False)}\n",
-    "                plt.plot([knapsacks['weight'] for _, knapsacks in knapsacks_sorted_by_weight.items()],\n",
-    "                         [knapsacks['value'] for _, knapsacks in knapsacks_sorted_by_weight.items()], '-o',\n",
-    "                                 alpha=alpha, color='purple', label=label)\n",
+    "                \n",
+    "            if display_pareto_front:\n",
+    "                plot_pareto_front(population_competing, objective_to_sort='weight', label=label, marker=f'-{marker}', color='purple', linewidth=None, alpha=alpha, markersize=size/5)\n",
+    "                \n",
     "\n",
     "        \n",
     "        \n",
@@ -1531,11 +1542,15 @@
     "n_generations = 20\n",
     "parents_compete = True\n",
     "selector = 'pareto_naive' # 'single_objective_optimisation'\n",
+    "display_pareto_front = True\n",
     "\n",
     "population_all_pareto = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
-    "                                                                exact_n_selection=True, \n",
-    "                                                                parents_compete=parents_compete)\n",
+    "                                                   exact_n_selection=True,\n",
+    "                                                   parents_compete=parents_compete,\n",
+    "                                                   display_pareto_front=display_pareto_front\n",
+    "                                                  )\n",
     "\n",
+    "plt.title('Pareto Optimisation')\n",
     "ax = plt.gca()\n",
     "x_lim = ax.get_xlim()\n",
     "y_lim = ax.get_ylim()"
@@ -1550,11 +1565,14 @@
     "selector = 'single_objective_optimisation'\n",
     "\n",
     "population_all_soh = knapsack_genetic_algorithm(n_generations, seed=1, selector=selector, \n",
-    "                                                                exact_n_selection=True, \n",
-    "                                                                parents_compete=parents_compete)\n",
+    "                                                exact_n_selection=True, \n",
+    "                                                parents_compete=parents_compete,\n",
+    "                                                display_pareto_front=display_pareto_front\n",
+    "                                               )\n",
     "\n",
     "plt.xlim(*x_lim)\n",
-    "plt.ylim(*y_lim)"
+    "plt.ylim(*y_lim)\n",
+    "plt.title('Single Objective Optimisation: value/weight')"
    ]
   },
   {
@@ -1588,6 +1606,7 @@
    "source": [
     "# visualising all individuals of both methods \n",
     "\n",
+    "\n",
     "def jitter(x, loc=1., scale=0.005):\n",
     "    return x * np.random.normal(loc, scale)\n",
     "\n",
@@ -1601,20 +1620,35 @@
     "indvs_pareto_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_pareto.items()])\n",
     "indvs_pareto_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_pareto.items()])\n",
     "plt.scatter(jitter(indvs_pareto_weights, scale = jitter_factor), jitter(indvs_pareto_values, scale = jitter_factor), \n",
-    "            s=size, alpha=alpha, color='green', label='Pareto Optimisation', marker=None, linewidth=4)\n",
+    "            s=size, alpha=alpha, color='green', label='Pareto Optimisation individuals', marker=None, linewidth=4)\n",
     "\n",
     "\n",
     "indvs_soh_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_soh.items()])\n",
     "indvs_soh_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_soh.items()])\n",
     "plt.scatter(jitter(indvs_soh_weights, scale = jitter_factor), jitter(indvs_soh_values, scale = jitter_factor),\n",
-    "            s=size, alpha=alpha, color='red', label='Value/Weight', marker='s', linewidth=4)\n",
+    "            s=size, alpha=alpha, color='red', label='Single Objective Optimisation individuals', marker='s', linewidth=4)\n",
+    "\n",
+    "\n",
+    "plot_pareto_front(population_all_pareto, color='green', label='Pareto Optimisation Pareto Front')\n",
+    "plot_pareto_front(population_all_soh, color='red', label='Single Objective Optimisation Pareto Front', marker='-s')\n",
+    "\n",
+    "indv_ = single_objective_selector(population_all_pareto, n_select=1)\n",
+    "key = list(indv_.keys())[0]\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='green', alpha=1, label='Pareto Optimisation max Value/Weight')\n",
+    "\n",
+    "indv_ = single_objective_selector(population_all_soh, n_select=1)\n",
+    "key = list(indv_.keys())[0]\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='red', alpha=0.6, label='Single Objective Optimisation max Value/Weight')\n",
     "\n",
     "\n",
     "plt.xlabel('weight [kg]')\n",
     "plt.ylabel('value [£]')\n",
     "plt.title(f'Individuals of all {n_generations} generations')\n",
     "\n",
-    "plt.legend()"
+    "plt.legend(fontsize=10)\n",
+    "plt.xlim(*x_lim)\n",
+    "plt.ylim(*y_lim)\n",
+    "pass"
    ]
   },
   {
@@ -1649,7 +1683,7 @@
    "source": [
     "# visualising a selected generation\n",
     "\n",
-    "n_generation_examine = 10 # -1 # 'final'\n",
+    "n_generation_examine = -1 # -1 # 'final'\n",
     "\n",
     "jitter_factor = 0 # 0.001\n",
     "\n",
@@ -1659,10 +1693,15 @@
     "    \n",
     "assert n_generation_examine < n_generations\n",
     "    \n",
+    "# indexes of this generation\n",
     "idx_indvs_pareto = [idx_indv for idx_indv, indv in population_all_pareto.items() if n_generation_examine in population_all_pareto[idx_indv]['generations']]\n",
     "idx_indvs_soh = [idx_indv for idx_indv, indv in population_all_soh.items() if n_generation_examine in population_all_soh[idx_indv]['generations']]\n",
     "\n",
-    "print(f'In the last generation (no. {n_generations})\\nthe pareto run had {len(idx_indvs_pareto):,} individuals and the SOH generated {len(idx_indvs_soh):,}')\n",
+    "# population of this generation\n",
+    "population_gen_pareto = {idx_knapsack: knapsack for idx_knapsack, knapsack in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto}\n",
+    "popuation_gen_soh     = {idx_knapsack: knapsack for idx_knapsack, knapsack in population_all_soh.items() if idx_knapsack in idx_indvs_soh}\n",
+    "\n",
+    "print(f'In this generation (no. {n_generation_examine + 1})\\nthe pareto run had {len(idx_indvs_pareto):,} individuals and the SOH generated {len(idx_indvs_soh):,}')\n",
     "\n",
     "indvs_pareto_weights = np.array([knapsacks['weight'] for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto])\n",
     "indvs_pareto_values  = np.array([knapsacks['value']  for idx_knapsack, knapsacks in population_all_pareto.items() if idx_knapsack in idx_indvs_pareto])\n",
@@ -1676,10 +1715,27 @@
     "plt.scatter(jitter(indvs_soh_weights, scale = jitter_factor), jitter(indvs_soh_values, scale = jitter_factor),\n",
     "            s=size, alpha=alpha, color='red', label='Value/Weight', marker='s', linewidth=4)\n",
     "\n",
-    "plt.legend()\n",
+    "\n",
+    "plot_pareto_front(population_gen_pareto, color='green', label='Pareto Optimisation Pareto Front')\n",
+    "plot_pareto_front(popuation_gen_soh, color='red', label='Single Objective Optimisation Pareto Front', marker='-s')\n",
+    "\n",
+    "indv_ = single_objective_selector(population_gen_pareto, n_select=1)\n",
+    "key = list(indv_.keys())[0]\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='green', alpha=1, label='Pareto Optimisation max Value/Weight')\n",
+    "\n",
+    "indv_ = single_objective_selector(popuation_gen_soh, n_select=1)\n",
+    "key = list(indv_.keys())[0]\n",
+    "plt.plot(indv_[key]['weight'], indv_[key]['value'], '*', markersize=20, color='red', alpha=0.6, label='Single Objective Optimisation max Value/Weight')\n",
+    "\n",
+    "\n",
+    "plt.legend(fontsize=10)  #(bbox_to_anchor=(1., 1))\n",
     "plt.xlabel('weight [kg]')\n",
     "plt.ylabel('value [£]')\n",
-    "plt.title(f'Individuals of generation {n_generation_examine} ')"
+    "plt.title(f'Individuals of generation {n_generation_examine} ')\n",
+    "\n",
+    "plt.xlim(*x_lim)\n",
+    "plt.ylim(*y_lim)\n",
+    "pass"
    ]
   },
   {
