decision space comparison

--- a/02_knapsack_2D_stochastic.ipynb
+++ b/02_knapsack_2D_stochastic.ipynb
@@ -1681,6 +1681,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# visulalising the decision space\n",
+    "\n",
+    "width = 0.4\n",
+    "alpha = 0.6\n",
+    "\n",
+    "package_idxs, package_counts = np.unique([package_idx for idx_indv, indv in population_all_pareto.items() for package_idx in indv['packages']], return_counts=True)\n",
+    "package_counts_pareto = {package_idx: package_count for package_idx, package_count in zip(package_idxs, package_counts)}\n",
+    "\n",
+    "package_idxs, package_counts = np.unique([package_idx for idx_indv, indv in population_all_soh.items() for package_idx in indv['packages']], return_counts=True)\n",
+    "package_counts_soh = {package_idx: package_count for package_idx, package_count in zip(package_idxs, package_counts)}\n",
+    "\n",
+    "\n",
+    "package_idxs = np.array(list(package_counts_pareto.keys()))\n",
+    "\n",
+    "plt.figure(figsize=(16,5))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "\n",
+    "plt.bar(package_idxs - width/2, package_counts_pareto.values(), color='green', width=width, alpha=alpha)\n",
+    "plt.bar(package_idxs + width/2, package_counts_soh.values() , color='red', width=width, alpha=alpha)\n",
+    "plt.xticks(np.arange(len(package_idxs)), package_idxs)\n",
+    "\n",
+    "plt.xlabel('package index')\n",
+    "plt.ylabel('counts')\n",
+    "\n",
+    "# ----\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.scatter([packages[idx_package]['weight'] for idx_package in packages],\n",
+    "            [packages[idx_package]['value'] for idx_package in packages],\n",
+    "            color = 'purple', alpha=0.04\n",
+    "           )\n",
+    "\n",
+    "\n",
+    "for idx_package, package in packages.items():\n",
+    "    fontsize_ = MEDIUM_SIZE\n",
+    "    plt.annotate(f'{idx_package:02.0f}', xy=(package['weight'], package['value']), fontsize=fontsize_)\n",
+    "    \n",
+    "plt.xlabel('weight [kg]')\n",
+    "plt.ylabel('value [£]')\n",
+    "plt.title('Packages')\n",
+    "\n",
+    "\n",
+    "pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# visualising a selected generation\n",
     "\n",
     "n_generation_examine = -1 # -1 # 'final'\n",
